--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,9 @@
 include:
   - template: Security/SAST.gitlab-ci.yml
-  - template: Security/Secret-Detection.gitlab-ci.yml
-  - template: Code-Quality.gitlab-ci.yml
+  
   # # GitLab Ultimate Only
-  - template: Dependency-Scanning.gitlab-ci.yml
-  - template: Security/License-Scanning.gitlab-ci.yml
   - template: DAST.gitlab-ci.yml
-  - template: Container-Scanning.gitlab-ci.yml
+  
 
 services: # use services to link the nodegoat container to the dast job
   - name: mongo:latest
@@ -18,6 +15,7 @@ variables:
   ### Dependency Scannig Variables
   # DS_DEFAULT_ANALYZERS: "gemnasium"
   DS_DEFAULT_ANALYZERS: "retire.js"
+
 
   ### DAST Variables
   FF_NETWORK_PER_BUILD: "true" # enable network per build so all services can communicate on the same network
@@ -42,6 +40,7 @@ variables:
 stages: 
   - build
   - test
+  - verify
   - dast
   - deploy
 
@@ -56,9 +55,6 @@ unitTesting:
     script: 
       - npm run test
 
-secret_detection:
-  variables:
-    SECRET_DETECTION_HISTORIC_SCAN: "true"
 
 build_and_deploy_container_image:
   services:
@@ -81,10 +77,53 @@ build_and_deploy_container_image:
 #     DOCKER_IMAGE: $CI_REGISTRY_IMAGE:latest
 #     CLAIR_TRACE: "true"
 
+sast:
+  stage: test
+  variables:
+    SAST_DEFAULT_ANALYZERS: "spotbugs"
+  #allow_failure: false
+  script: |
+    - if: $CI_MERGE_REQUEST_IID
+    - if: $CI_COMMIT_BRANCH == "master"
+  artifacts:
+      paths: [gl-sast-report.json]
+      reports:
+        sast: gl-sast-report.json
+
+  
+
+
 dast:
   # Register the user first, note this assumes the application is up and running for registration to succeed
   before_script: 
     - curl -v -d 'userName=$GOAT_USERNAME&firstName=test&lastName=test&password=$GOAT_PASSWORD&verify=$GOAT_PASSWORD&email=&_csrf=' "http://nodegoat:4000/signup"
+
+
+
+sast_verification:
+  stage: verify
+  rules:
+    - if: $CI_COMMIT_BRANCH == "master"
+    - if: $CI_MERGE_REQUEST_IID
+  artifacts:
+    paths: [gl-sast-report.json]
+    reports:
+      sast: gl-sast-report.json
+  script: |
+    cat gl-sast-report.json 
+    
+    
+    grep -EIho 'Critical|High|Medium|Low|Info|Unknown' gl-sast-report.json  |sort|uniq -c
+    
+
+    if grep -c 'Critical\|High\|Medium\|Low\|Info\|Unknown'  'gl-sast-report.json';
+    then
+      echo "Aborts due to security issues."; exit 1
+    else
+      echo "🙂 all good! Your source code looks amazing";
+    fi
+
+
 
 deploy:
   stage: deploy
