--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -31,7 +31,7 @@ stages:
 sast:
   stage: test
   variables:
-    SAST_DEFAULT_ANALYZERS: "nodejs-scan, eslint"
+    SAST_DEFAULT_ANALYZERS: "nodejs-scan, eslint, semgrep"
   #allow_failure: false
   script: |
     - if: $CI_MERGE_REQUEST_IID
